# obs-studio-plugin-vce

./: CMakeLists.txt  FindAMDAMF.cmake  README.md  obs-vce-amf-bitstream.cpp  obs-vce-amf-converters.cpp  obs-vce-amf-d3d11.cpp  obs-vce-amf-surface.cpp  obs-vce-amf.cpp  obs-vce-mft.cpp  obs-vce-optional.cpp  obs-vce-plugin-main.cpp  obs-vce.cpp  obs-vce.h
include/: ErrorCodes.h  PrintLog.h  Typedef.h  VqMft.h
include/amf/core/: Platform.h
lib/amf/x86/: amf-core-windesktop32.lib
lib/amf/x86_64/: amf-core-windesktop64.lib
